fix: hide navbar overflow (#157)
Close: https://github.com/micronaut-projects/static-website/issues/140

--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -634,6 +634,7 @@ nav li {
     width: 100%;
     transition: top 0.5s;
     height: 75px;
+    overflow: hidden;
 }
 
 .main nav li {
